--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Gala Apples
+title: Home
 ---
 <!DOCTYPE html>
 <html>
@@ -9,6 +9,7 @@ title: Gala Apples
     <title>{{ page.title }}</title>
   </head>
   <body>
-    <h1>{{ "Hello World!" | downcase }}</h1>
+    <h1>"Hello World!"</h1>
+    <p>Github Page built with Jekll Theme</p>
   </body>
 </html>
