--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ title: Home
     <title>{{ page.title }}</title>
   </head>
   <body>
-    <h1>"Hello World!"</h1>
+    <h1>Hello World!</h1>
     <p>Github Page built with Jekll Theme</p>
+    <img src="https://cataas.com/cat/says/hello%20world!" alt="cat" width="500" height="600">
   </body>
 </html>
