--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ title: Home
   <body>
     <h1>Hello World!</h1>
     <p>Github Page built with Jekll Theme</p>
+    <p>Images provided by the Cataas REST API. Refresh the page for a new cat.</p>
     <img src="https://cataas.com/cat/says/hello%20world!" alt="cat" width="500" height="600">
   </body>
 </html>
